--- a/shap_e/examples/sample_text_to_3d.ipynb
+++ b/shap_e/examples/sample_text_to_3d.ipynb
@@ -97,7 +97,7 @@
     "        t.write_ply(f)\n",
     "    with open(f'example_mesh_{i}.obj', 'w') as f:\n",
     "        t.write_obj(f)\n",
-    "    with open(f'example_mesh_{i}.glb', 'w') as f:\n",
+    "    with open(f'example_mesh_{i}.glb', 'wb') as f:\n",
     "        t.write_glb(f)"
    ]
   }
